pxc/tests/test_035_array/varr2.px
public namespace varr2;
import core::common -;

function void t1() {
  varray{int} arr;
  arr.push_back(3.5); // error
  println(arr);
}

t1();
